--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,18 @@
+@keyframes spin {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 :root {
   --color-primary-blue: #011c44;
   --color-primary-light: #ffffff;
   --color-brand-blue: #2b7fff;
   --color-brand-dark: #000000;
+  --color-form-border: #747272;
 }
 
 /* Base */
@@ -16,15 +26,24 @@ body {
   font-size: 18px;
   font-weight: 400;
   line-height: 1.3;
-  margin: 0;
   background-image: url(../img/background.png);
   background-repeat: no-repeat;
-  background-size: cover;
-  /* background-position: -400px 400px; */
+  background-size: contain;
+  margin: 0;
+  background-position: 0% 67%;
 }
 
 a {
   text-decoration: none;
+}
+
+.visually-hidden {
+  position: absolute;
+  left: -10000px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
 }
 
 h1,
@@ -59,7 +78,11 @@ ul {
 }
 
 /* Header */
-.header-container {
+.header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
   padding: 42px 100px;
 }
 
@@ -92,6 +115,7 @@ ul {
   cursor: pointer;
   font-family: 'Roboto';
   line-height: 1.2;
+  transition: color 0.2s;
 }
 
 .navigation-link:hover {
@@ -107,6 +131,7 @@ ul {
 
 .header-menu-icons .menu-icon:hover {
   fill: var(--color-brand-blue);
+  transition: fill 0.2s;
 }
 
 /* Main */
@@ -118,6 +143,11 @@ ul {
   background-repeat: no-repeat;
   background-position: top right;
   background-size: contain;
+}
+
+.hero-section-wrapper {
+  max-width: 410px;
+  padding: 16px 0 0 105px;
 }
 
 .hero-text {
@@ -145,6 +175,7 @@ ul {
   font-family: 'Roboto';
   font-weight: 600;
   margin-bottom: 14px;
+  transition: color 0.2s, background-color 0.2s;
 }
 
 .button:hover {
@@ -164,6 +195,10 @@ ul {
 /* section-about_us */
 .about_us-section {
   margin-bottom: 176px;
+}
+
+.about_us-text-wrapper {
+  max-width: 700px;
 }
 
 .section-title {
@@ -199,12 +234,59 @@ ul {
   font-weight: 600;
 }
 
+.about_us-img-wrapper {
+  position: relative;
+}
+
 .about_us-img {
   /* border: 1px solid black; */
   border-radius: 50%;
+  position: absolute;
+  left: 50%;
+  top: calc(60% + 40px);
+}
+
+.about_us-img-wrapper img:first-child {
+  border-radius: 50%;
+}
+
+.star_top {
+  position: absolute;
+  top: 32px;
+  right: -140px;
+  animation: spin;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+
+.star_middle {
+  position: absolute;
+  top: 250px;
+  right: -100px;
+  animation: spin;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+
+.star_bot {
+  position: absolute;
+  top: 350px;
+  right: 130px;
+  animation: spin;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
 }
 
 /* Section choose_us */
+/* .section-choose_us {
+  background-image: url(../img/background.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+} */
+
 .section-title.choose_us-centered {
   text-align: center;
   width: 450px;
@@ -279,6 +361,11 @@ ul {
     rgba(14, 84, 225, 0.71) 72.92%,
     var(--color-primary-blue) 100%
   );
+  transition: transform 0.2s;
+}
+
+.procedures-card:hover {
+  transform: scale(1.05);
 }
 
 .procedures-text {
@@ -303,6 +390,16 @@ ul {
   border: 1px solid var(--color-brand-dark);
   border-radius: 50%;
   cursor: pointer;
+  transition: fill 0.2s, background-color 0.2s;
+}
+
+.carousel-button:hover {
+  fill: var(--color-primary-light);
+  background-color: var(--color-brand-blue);
+}
+
+.carousel-button.next {
+  transform: rotate(180deg);
 }
 
 /* Section Location */
@@ -317,6 +414,7 @@ ul {
 .location-container {
   display: flex;
   gap: 32px;
+  justify-content: center;
 }
 
 .location-map {
@@ -325,29 +423,40 @@ ul {
   flex-shrink: 0;
 }
 
-.location-text {
-  color: var(--color-primary-light);
-  font-family: 'Roboto';
-  font-weight: 600;
-  font-size: 22px;
-  line-height: 1.2;
+.location_form-container {
+  width: 100%;
+  height: 100%;
+  max-width: 425px;
+  max-height: 480px;
+  padding: 48px 74px;
+  background-color: var(--color-primary-blue);
+  background-image: url(../img/modal-bg.png);
+  border-radius: 32px;
+  overflow-y: hidden;
 }
 
-.location-text span {
+.location-form-title {
+  text-align: center;
+  color: var(--color-primary-light);
+  font-family: 'Roboto';
+  font-size: 22px;
+  font-weight: 600;
+  line-height: 1.17;
+  margin-bottom: 32px;
+}
+
+.location-form-title span {
   color: var(--color-brand-blue);
 }
 
-.text-confidentiality {
-  color: #747272;
-  font-size: 12px;
-  line-height: 1.5;
+.location-form-field {
+  margin-bottom: 18px;
+  position: relative;
 }
 
-.link-confidentiality {
-  text-decoration: underline;
-  color: #747272;
-  font-size: 12px;
-  line-height: 1.5;
+.location-form-button {
+  margin: 0 auto 8px;
+  display: block;
 }
 
 /* Address */
@@ -356,6 +465,7 @@ ul {
   color: var(--color-primary-light);
   font-size: 16px;
   line-height: 1.2;
+  transition: color 0.2s;
 }
 
 .address-link:hover {
@@ -368,7 +478,7 @@ ul {
   line-height: 1.2;
 }
 
-/* footer color */
+/* Footer */
 
 footer {
   background-color: #011c44;
@@ -376,6 +486,18 @@ footer {
   background-repeat: no-repeat;
   background-size: cover;
   padding: 56px 0;
+  position: relative;
+}
+
+.footer::after {
+  content: '';
+  position: absolute;
+  background-repeat: no-repeat;
+  bottom: 0;
+  right: 0;
+  background-image: url(../img/cosmetic.png);
+  width: 247px;
+  height: 152px;
 }
 
 .footer-container {
@@ -408,3 +530,117 @@ footer {
 .footer-menu-icons .menu-icon:hover {
   fill: var(--color-brand-blue);
 } */
+
+/* Modal */
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(110, 130, 155, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: opacity 0.2s, visibility 0.2s;
+}
+
+.modal {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  max-width: 765px;
+  max-height: 680px;
+  padding: 42px 144px;
+  background-color: var(--color-primary-blue);
+  background-image: url(../img/modal-bg.png);
+  border-radius: 48px;
+  overflow-y: hidden;
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.modal-btn-close {
+  position: absolute;
+  top: 40px;
+  right: 40px;
+}
+
+.modal-title {
+  font-family: 'Play';
+  font-size: 64px;
+  color: var(--color-primary-light);
+  text-align: center;
+  font-weight: 700;
+  line-height: 1.15;
+  margin-bottom: 8px;
+}
+
+.modal-text {
+  text-align: center;
+  color: var(--color-primary-light);
+  margin-bottom: 72px;
+}
+
+.modal-text span {
+  color: var(--color-brand-blue);
+}
+
+/* Form */
+.form-field {
+  margin-bottom: 32px;
+  position: relative;
+}
+
+.form-label {
+  position: absolute;
+  left: 42px;
+  top: 16px;
+}
+
+.form-input {
+  color: var(--color-primary-light);
+  padding: 18px 32px;
+  width: 100%;
+  font-size: 13px;
+  line-height: 1.17;
+  border: 2px solid var(--color-form-border);
+  border-radius: 32px;
+  background-color: transparent;
+}
+
+.form-input:focus {
+  background-color: var(--color-form-border);
+  outline: none;
+}
+
+.form-input::placeholder {
+  color: var(--color-primary-light);
+  font-size: 13px;
+  line-height: 1.17;
+}
+
+.form-button {
+  margin: 0 auto 24px;
+  display: block;
+}
+
+.form-terms {
+  margin: 0 auto;
+  max-width: 220px;
+  font-weight: 500;
+  font-size: 12px;
+  text-align: center;
+  color: var(--color-form-border);
+}
+
+.form-terms a {
+  color: var(--color-form-border);
+  text-underline-offset: 3px;
+  text-decoration: underline;
+}
