--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,75 @@
-@keyframes spin {
+/* Fonts */
+/* Roboto */
+@font-face {
+  font-display: swap;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 300;
+  src: url("../fonts/roboto-v32-cyrillic_latin-300.woff2") format("woff2");
+}
+@font-face {
+  font-display: swap;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../fonts/roboto-v32-cyrillic_latin-regular.woff2") format("woff2");
+}
+@font-face {
+  font-display: swap;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  src: url("../fonts/roboto-v32-cyrillic_latin-500.woff2") format("woff2");
+}
+@font-face {
+  font-display: swap;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  src: url("../fonts/roboto-v32-cyrillic_latin-700.woff2") format("woff2");
+}
+@font-face {
+  font-display: swap;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 900;
+  src: url("../fonts/roboto-v32-cyrillic_latin-900.woff2") format("woff2");
+}
+/* Play */
+@font-face {
+  font-display: swap;
+  font-family: "Play";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../fonts/play-v19-cyrillic_latin-regular.woff2") format("woff2");
+}
+@font-face {
+  font-display: swap;
+  font-family: "Play";
+  font-style: normal;
+  font-weight: 700;
+  src: url("../fonts/play-v19-cyrillic_latin-700.woff2") format("woff2");
+}
+@-webkit-keyframes spin {
   0% {
-    transform: rotate(0);
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
   }
   100% {
-    transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
   }
 }
-
+@keyframes spin {
+  0% {
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
 :root {
   --color-primary-blue: #011c44;
   --color-primary-light: #ffffff;
@@ -15,14 +78,14 @@
   --color-form-border: #747272;
 }
 
-/* Base */
 * {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 body {
   color: var(--color-primary-blue);
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 18px;
   font-weight: 400;
   line-height: 1.3;
@@ -77,7 +140,6 @@ ul {
   padding: 0 24px;
 }
 
-/* Header */
 .header {
   position: absolute;
   top: 0;
@@ -87,22 +149,34 @@ ul {
 }
 
 .header-nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  flex-grow: 1;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   gap: 40px;
 }
 
 .header-menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   gap: 56px;
-  flex-grow: 1;
-  justify-content: center;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .logo-link {
   color: var(--color-brand-blue);
-  font-family: 'Play';
+  font-family: "Play";
   font-weight: 700;
   font-size: 22px;
   line-height: 0.95;
@@ -113,8 +187,9 @@ ul {
 .navigation-link {
   color: var(--color-primary-blue);
   cursor: pointer;
-  font-family: 'Roboto';
+  font-family: "Roboto";
   line-height: 1.2;
+  -webkit-transition: color 0.2s;
   transition: color 0.2s;
 }
 
@@ -124,6 +199,8 @@ ul {
 }
 
 .header-menu-icons {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   gap: 32px;
   fill: var(--color-primary-blue);
@@ -131,12 +208,10 @@ ul {
 
 .header-menu-icons .menu-icon:hover {
   fill: var(--color-brand-blue);
+  -webkit-transition: fill 0.2s;
   transition: fill 0.2s;
 }
 
-/* Main */
-
-/* Hero section */
 .hero-section {
   padding: 126px 0;
   background-image: url(../img/hero-section-bg.jpg);
@@ -157,14 +232,22 @@ ul {
 .hero-title {
   text-transform: capitalize;
   color: var(--color-brand-blue);
-  font-family: 'Play';
+  font-family: "Play";
   font-weight: 700;
   line-height: 0.8;
   font-size: 140px;
   margin-bottom: 40px;
 }
 
-/* Button */
+.consultation-text {
+  color: #4a4a4a;
+  font-family: "Roboto";
+  font-size: 12px;
+  line-height: 1.5;
+  margin-bottom: 0px;
+  max-width: 250px;
+}
+
 .button {
   padding: 16px 32px;
   color: var(--color-primary-light);
@@ -172,9 +255,10 @@ ul {
   border: 2px solid var(--color-brand-blue);
   border-radius: 32px;
   cursor: pointer;
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-weight: 600;
   margin-bottom: 14px;
+  -webkit-transition: color 0.2s, background-color 0.2s;
   transition: color 0.2s, background-color 0.2s;
 }
 
@@ -183,16 +267,6 @@ ul {
   background-color: transparent;
 }
 
-.consultation-text {
-  color: #4a4a4a;
-  font-family: 'Roboto';
-  font-size: 12px;
-  line-height: 1.5;
-  margin-bottom: 0px;
-  max-width: 250px;
-}
-
-/* section-about_us */
 .about_us-section {
   margin-bottom: 176px;
 }
@@ -203,7 +277,7 @@ ul {
 
 .section-title {
   color: var(--color-primary-blue);
-  font-family: 'Play';
+  font-family: "Play";
   font-size: 64px;
   line-height: 1.2;
   margin-bottom: 48px;
@@ -219,6 +293,8 @@ ul {
 }
 
 .about_us-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   gap: 40px;
 }
@@ -254,38 +330,43 @@ ul {
   position: absolute;
   top: 32px;
   right: -140px;
-  animation: spin;
-  animation-duration: 2s;
-  animation-iteration-count: infinite;
-  animation-timing-function: linear;
+  -webkit-animation: spin;
+          animation: spin;
+  -webkit-animation-duration: 2s;
+          animation-duration: 2s;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+  -webkit-animation-timing-function: linear;
+          animation-timing-function: linear;
 }
 
 .star_middle {
   position: absolute;
   top: 250px;
   right: -100px;
-  animation: spin;
-  animation-duration: 2s;
-  animation-iteration-count: infinite;
-  animation-timing-function: linear;
+  -webkit-animation: spin;
+          animation: spin;
+  -webkit-animation-duration: 2s;
+          animation-duration: 2s;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+  -webkit-animation-timing-function: linear;
+          animation-timing-function: linear;
 }
 
 .star_bot {
   position: absolute;
   top: 350px;
   right: 130px;
-  animation: spin;
-  animation-duration: 2s;
-  animation-iteration-count: infinite;
-  animation-timing-function: linear;
+  -webkit-animation: spin;
+          animation: spin;
+  -webkit-animation-duration: 2s;
+          animation-duration: 2s;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+  -webkit-animation-timing-function: linear;
+          animation-timing-function: linear;
 }
-
-/* Section choose_us */
-/* .section-choose_us {
-  background-image: url(../img/background.png);
-  background-repeat: no-repeat;
-  background-size: cover;
-} */
 
 .section-title.choose_us-centered {
   text-align: center;
@@ -295,24 +376,34 @@ ul {
 }
 
 .choose_us-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
 .choose_us-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .choose_us-item {
-  flex-basis: calc((100% - 40px) / 3);
+  -ms-flex-preferred-size: calc((100% - 40px) / 3);
+      flex-basis: calc((100% - 40px) / 3);
 }
 
 .choose_us-card {
   padding: 24px 32px;
   border: 1px solid black;
   border-radius: 32px;
-  box-shadow: 1px 8px 5px 1px #a8c6f561;
+  -webkit-box-shadow: 1px 8px 5px 1px rgba(168, 198, 245, 0.3803921569);
+          box-shadow: 1px 8px 5px 1px rgba(168, 198, 245, 0.3803921569);
   height: 180px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
@@ -320,68 +411,102 @@ ul {
   color: var(--color-brand-dark);
   text-align: center;
   padding-top: 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-/* Section Procedures */
 .section-title.pocedures-centered {
   text-align: center;
 }
 
 .procedures-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   gap: 32px;
 }
 
 .procedures-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   gap: 20px;
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .procedures-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-basis: calc((100% - 40px) / 3);
-  justify-content: center;
+  -ms-flex-preferred-size: calc((100% - 40px) / 3);
+      flex-basis: calc((100% - 40px) / 3);
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .procedures-card {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
   padding: 24px;
   border: 1px solid black;
   border-radius: 4px 120px 4px 120px;
   height: 455px;
   width: 345px;
-  display: flex;
-  justify-content: center;
-  background-image: linear-gradient(
-    180deg,
-    rgba(10, 44, 213, 0) 55.21%,
-    rgba(14, 84, 225, 0.71) 72.92%,
-    var(--color-primary-blue) 100%
-  );
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(55.21%, rgba(10, 44, 213, 0)), color-stop(72.92%, rgba(14, 84, 225, 0.71)), to(var(--color-primary-blue)));
+  background-image: linear-gradient(180deg, rgba(10, 44, 213, 0) 55.21%, rgba(14, 84, 225, 0.71) 72.92%, var(--color-primary-blue) 100%);
+  -webkit-transition: -webkit-transform 0.2s;
+  transition: -webkit-transform 0.2s;
   transition: transform 0.2s;
+  transition: transform 0.2s, -webkit-transform 0.2s;
 }
 
 .procedures-card:hover {
-  transform: scale(1.05);
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
+}
+
+.procedures-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
 }
 
 .procedures-text {
   color: var(--color-primary-light);
   font-size: 22px;
   line-height: 1.2;
-  display: flex;
-  align-items: end;
 }
 
-/* Carousel button */
-
 .carousel-button {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   width: 44px;
   height: 44px;
   padding: 0;
@@ -390,6 +515,7 @@ ul {
   border: 1px solid var(--color-brand-dark);
   border-radius: 50%;
   cursor: pointer;
+  -webkit-transition: fill 0.2s, background-color 0.2s;
   transition: fill 0.2s, background-color 0.2s;
 }
 
@@ -399,10 +525,10 @@ ul {
 }
 
 .carousel-button.next {
-  transform: rotate(180deg);
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
 }
 
-/* Section Location */
 .section.section-location {
   padding-bottom: 94px;
 }
@@ -412,15 +538,20 @@ ul {
 }
 
 .location-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   gap: 32px;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .location-map {
   border: none;
   border-radius: 32px;
-  flex-shrink: 0;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
 }
 
 .location_form-container {
@@ -438,7 +569,7 @@ ul {
 .location-form-title {
   text-align: center;
   color: var(--color-primary-light);
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-size: 22px;
   font-weight: 600;
   line-height: 1.17;
@@ -459,12 +590,38 @@ ul {
   display: block;
 }
 
-/* Address */
+footer {
+  background-color: #011c44;
+  background-image: url(../img/footer-bg.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 56px 0;
+  position: relative;
+}
+
+.footer::after {
+  content: "";
+  position: absolute;
+  background-repeat: no-repeat;
+  bottom: 0;
+  right: 0;
+  background-image: url(../img/cosmetic.png);
+  width: 247px;
+  height: 152px;
+}
+
+.footer-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 20px;
+}
 
 .address-link {
   color: var(--color-primary-light);
   font-size: 16px;
   line-height: 1.2;
+  -webkit-transition: color 0.2s;
   transition: color 0.2s;
 }
 
@@ -478,48 +635,28 @@ ul {
   line-height: 1.2;
 }
 
-/* Footer */
-
-footer {
-  background-color: #011c44;
-  background-image: url(../img/footer-bg.png);
-  background-repeat: no-repeat;
-  background-size: cover;
-  padding: 56px 0;
-  position: relative;
-}
-
-.footer::after {
-  content: '';
-  position: absolute;
-  background-repeat: no-repeat;
-  bottom: 0;
-  right: 0;
-  background-image: url(../img/cosmetic.png);
-  width: 247px;
-  height: 152px;
-}
-
-.footer-container {
-  display: flex;
-  gap: 20px;
-}
-
 .footer-nav,
 .footer-address {
-  flex-basis: 50%;
+  -ms-flex-preferred-size: 50%;
+      flex-basis: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   gap: 20px;
 }
 
 .footer-logo,
 .footer-menu {
-  flex-grow: 1;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 
 .address-list,
 .address-info {
-  flex-grow: 1;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 
 /* .footer-menu-icons {
@@ -530,9 +667,6 @@ footer {
 .footer-menu-icons .menu-icon:hover {
   fill: var(--color-brand-blue);
 } */
-
-/* Modal */
-
 .backdrop {
   position: fixed;
   top: 0;
@@ -540,9 +674,16 @@ footer {
   bottom: 0;
   left: 0;
   background-color: rgba(110, 130, 155, 0.5);
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-transition: opacity 0.2s, visibility 0.2s;
   transition: opacity 0.2s, visibility 0.2s;
 }
 
@@ -572,7 +713,7 @@ footer {
 }
 
 .modal-title {
-  font-family: 'Play';
+  font-family: "Play";
   font-size: 64px;
   color: var(--color-primary-light);
   text-align: center;
@@ -591,7 +732,6 @@ footer {
   color: var(--color-brand-blue);
 }
 
-/* Form */
 .form-field {
   margin-bottom: 32px;
   position: relative;
@@ -619,6 +759,30 @@ footer {
   outline: none;
 }
 
+.form-input::-webkit-input-placeholder {
+  color: var(--color-primary-light);
+  font-size: 13px;
+  line-height: 1.17;
+}
+
+.form-input::-moz-placeholder {
+  color: var(--color-primary-light);
+  font-size: 13px;
+  line-height: 1.17;
+}
+
+.form-input:-ms-input-placeholder {
+  color: var(--color-primary-light);
+  font-size: 13px;
+  line-height: 1.17;
+}
+
+.form-input::-ms-input-placeholder {
+  color: var(--color-primary-light);
+  font-size: 13px;
+  line-height: 1.17;
+}
+
 .form-input::placeholder {
   color: var(--color-primary-light);
   font-size: 13px;
@@ -643,4 +807,4 @@ footer {
   color: var(--color-form-border);
   text-underline-offset: 3px;
   text-decoration: underline;
-}
+}/*# sourceMappingURL=main.css.map */
