--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -9,9 +9,9 @@
   font-weight: 600;
   margin-bottom: 14px;
   transition: color 0.2s, background-color 0.2s;
-}
 
-.button:hover {
-  color: var(--color-primary-blue);
-  background-color: transparent;
+  &:hover {
+    // color: var(--color-primary-blue);
+    background-color: transparent;
+  }
 }
