--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,46 +1,54 @@
+// Components
+// Button
+@import './components/buttons';
+// Carousel button
+@import './components/carousel';
+// Links
+@import './components/links';
+// Social icons
+@import './components/social-icons';
+// Stars
+@import './components/stars-svg';
+// Privilege cards
+@import './components/privilege-cards';
+// Procedures cards
+@import './components/procedures-cards';
+// Form terms
+@import './components/form-terms';
+
+// Layouts
+// Section About us
+@import './layouts/about-section';
+// Section Choose us
+@import './layouts/privilege-section';
+// Footer
+@import './layouts/footer';
+// Form
+@import './layouts/forms';
+// Header
+@import './layouts/header';
+// Hero section
+@import './layouts/hero-section';
+// Section Location
+@import './layouts/location-section';
+// Modal
+@import './layouts/modal';
+// Section Procedures
+@import './layouts/procedures-section';
+// Section
+@import './layouts/section';
+// Form section location
+@import './layouts/section-location-form';
+
+// Utils
 // Fonts
 @import './utils/fonts';
-
 // Keyframes
 @import './utils/keyframes';
-
+// Texts
+@import './utils/texts';
 // Variables
 @import './utils/variables';
 
 // Base
 @import './base';
-
-// Header
-@import './components/header';
-
-// Main
-
-// Hero section
-@import './components/hero-section';
-
-// Button
-@import './utils/buttons';
-
-// Section About us
-@import './components/about_us-section';
-
-// Section Choose us
-@import './components/choose_us-section';
-
-// Section Procedures
-@import './components/procedures-section';
-
-// Carousel button
-@import './utils/carousel';
-
-// Section Location
-@import './components/location-section';
-
-// Footer
-@import './components/footer';
-
-// Modal
-@import './utils/modal';
-
-// Form
-@import './utils/forms';
