Add adaptive + mobile menu

--- a/scss/components/_stars-svg.scss
+++ b/scss/components/_stars-svg.scss
@@ -1,29 +1,46 @@
-.star-top {
-  position: absolute;
-  top: 32px;
-  right: -140px;
-  animation: spin;
-  animation-duration: 2s;
-  animation-iteration-count: infinite;
-  animation-timing-function: linear;
-}
+.star {
+  &-top {
+    display: none;
 
-.star-middle {
-  position: absolute;
-  top: 250px;
-  right: -100px;
-  animation: spin;
-  animation-duration: 2s;
-  animation-iteration-count: infinite;
-  animation-timing-function: linear;
-}
+    @media screen and (min-width: $bp-desktop) {
+      display: block;
+      position: absolute;
+      top: 32px;
+      right: -140px;
+      animation: spin;
+      animation-duration: 2s;
+      animation-iteration-count: infinite;
+      animation-timing-function: linear;
+    }
+  }
 
-.star-bot {
-  position: absolute;
-  top: 350px;
-  right: 130px;
-  animation: spin;
-  animation-duration: 2s;
-  animation-iteration-count: infinite;
-  animation-timing-function: linear;
+  &-middle {
+    display: none;
+    @media screen and (min-width: $bp-desktop) {
+      display: block;
+      position: absolute;
+      top: 250px;
+      right: -100px;
+      animation: spin;
+      animation-duration: 2s;
+      animation-iteration-count: infinite;
+      animation-timing-function: linear;
+    }
+  }
+
+  &-bot {
+    position: absolute;
+    top: 25px;
+    right: 15px;
+    animation: spin;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    @media screen and (min-width: $bp-desktop) {
+      display: block;
+      position: absolute;
+      top: 350px;
+      right: 205px;
+    }
+  }
 }
