--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -3,8 +3,22 @@
   top: 0;
   left: 0;
   width: 100%;
-  padding: 42px 100px;
-  backdrop-filter: blur(10px);
+  padding: 16px 20px;
+
+  @media screen and (min-width: $bp-desktop) {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 42px 100px;
+    backdrop-filter: blur(10px);
+    // background: linear-gradient(
+    //   180deg,
+    //   rgb(255, 255, 255, 0.8) calc(100% - 25px),
+    //   rgb(255, 255, 255) calc(100% - 20px),
+    //   rgba(255, 255, 255, 0)
+    // );
+  }
 
   &__container {
     display: flex;
@@ -13,11 +27,35 @@
   }
 
   &__nav {
-    display: flex;
+    display: none;
+
+    @media screen and (min-width: $bp-desktop) {
+      display: flex;
+    }
   }
 
   &__menu {
     display: flex;
     gap: 56px;
+  }
+
+  &__burger {
+    background-color: transparent;
+    border: none;
+    width: 24px;
+    height: 24px;
+    padding: 0;
+    fill: var(--color-primary-light);
+
+    @media screen and (min-width: $bp-desktop) {
+      display: none;
+    }
+  }
+}
+
+.social__nav {
+  display: none;
+  @media screen and (min-width: $bp-desktop) {
+    display: block;
   }
 }
