--- a/scss/layouts/_section.scss
+++ b/scss/layouts/_section.scss
@@ -1,15 +1,26 @@
 .section {
-  padding: 48px 0;
+  padding: 20px 0;
+
+  @media screen and (min-width: $bp-desktop) {
+    padding: 48px 0;
+  }
 
   &__title {
     color: var(--color-primary-blue);
-    font-family: 'Play';
-    font-size: 64px;
+    font-family: 'Roboto';
+    font-size: 32px;
     line-height: 1.2;
-    margin-bottom: 48px;
+    margin-bottom: 24px;
 
     &--centered {
       text-align: center;
+    }
+
+    @media screen and (min-width: $bp-desktop) {
+      font-size: 64px;
+      line-height: 1.2;
+      font-family: 'Play';
+      margin-bottom: 48px;
     }
   }
 }
