--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -51,7 +51,12 @@ ul {
 
 .container {
   width: 100%;
-  max-width: 1288px;
+  max-width: 480px;
   margin: 0 auto;
-  padding: 0 24px;
+  padding: 0 20px;
+
+  @media screen and (min-width: $bp-desktop) {
+    padding: 0 100px;
+    max-width: 1280px;
+  }
 }
