--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -15,3 +15,21 @@
     background-color: transparent;
   }
 }
+
+.hero-section__button {
+  display: flex;
+  margin: 0 auto 8px;
+  padding: 12.5px 24px;
+  font-size: 16px;
+
+  &:hover {
+    color: var(--color-brand-blue);
+  }
+
+  @media screen and (min-width: $bp-desktop) {
+    display: block;
+    margin: 0 0 14px 0;
+    padding: 16px 32px;
+    font-size: 18px;
+  }
+}
