--- a/scss/components/_privilege-cards.scss
+++ b/scss/components/_privilege-cards.scss
@@ -1,11 +1,23 @@
 .privilege-card {
   &__list {
-    display: flex;
-    justify-content: space-between;
+    display: block;
+
+    @media screen and (min-width: $bp-desktop) {
+      display: flex;
+      justify-content: space-between;
+      gap: 56px;
+    }
   }
 
   &__item {
-    flex-basis: calc((100% - 40px) / 3);
+    margin-bottom: 16px;
+
+    @media screen and (min-width: $bp-desktop) {
+      display: flex;
+      justify-content: space-between;
+      flex-basis: calc((100% - 40px) / 3);
+      margin-bottom: 0;
+    }
   }
 
   &__control {
@@ -13,15 +25,24 @@
     border: 1px solid black;
     border-radius: 32px;
     box-shadow: 1px 8px 5px 1px #a8c6f561;
-    height: 180px;
-    display: flex;
+    height: fit-content;
+  }
+
+  &__img-link {
+    display: block;
+    margin: 0 auto 20px;
+    width: 48px;
+    height: 48px;
+    fill: var(--color-brand-blue);
+
+    @media screen and (min-width: $bp-desktop) {
+      margin: 0 auto 35px;
+    }
   }
 
   &__text {
     color: var(--color-brand-dark);
     text-align: center;
-    padding-top: 100px;
-    display: flex;
-    align-items: center;
+    margin-bottom: 0;
   }
 }
