--- a/scss/components/_procedures-cards.scss
+++ b/scss/components/_procedures-cards.scss
@@ -18,10 +18,10 @@
     justify-content: center;
     align-items: flex-end;
     padding: 24px;
-    border: 1px solid black;
-    border-radius: 4px 120px 4px 120px;
-    height: 455px;
-    width: 345px;
+    // border: 1px solid black;
+    border-radius: 4px 125px 4px 125px;
+    height: 344px;
+    // width: 345px;
     background-image: linear-gradient(
       180deg,
       rgba(10, 44, 213, 0) 55.21%,
@@ -42,12 +42,15 @@
     width: 100%;
     height: 100%;
     z-index: -1;
+    border-radius: 4px 120px 4px 120px;
   }
 
   &__title {
     color: var(--color-primary-light);
     font-size: 22px;
     line-height: 1.2;
+    flex-basis: 150px;
+    text-align: center;
     // display: flex;
     // align-items: end;
   }
