--- a/scss/layouts/_about-section.scss
+++ b/scss/layouts/_about-section.scss
@@ -1,43 +1,94 @@
 .section-about {
-  margin-bottom: 176px;
+  margin-bottom: 104px;
+
+  @media screen and (min-width: $bp-desktop) {
+    margin-bottom: 176px;
+  }
 
   &__container {
-    display: flex;
-    gap: 40px;
+    display: block;
+
+    @media screen and (min-width: $bp-desktop) {
+      display: flex;
+      gap: 40px;
+    }
   }
 
   &__text {
-    max-width: 700px;
+    max-width: 320px;
+    @media screen and (min-width: $bp-desktop) {
+      max-width: 600px;
+    }
   }
 
   &__title.section__title {
-    padding-top: 40px;
-    margin-bottom: 40px;
+    margin-bottom: 24px;
+    font-size: 32px;
+    font-weight: 500;
+    font-family: 'Roboto';
+
+    @media screen and (min-width: $bp-desktop) {
+      margin-bottom: 24px;
+      font-size: 64px;
+      font-weight: 700;
+      font-family: 'Play';
+    }
   }
 
   &__title--blue-color {
     color: var(--color-brand-blue);
+    @media screen and (min-width: $bp-desktop) {
+      font-weight: 700;
+    }
   }
 
   &__text-description {
-    font-size: 22px;
-    line-height: 1.7;
-    margin-bottom: 40px;
+    font-size: 18px;
+    line-height: 1.2;
+    margin-bottom: 16px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+
+    @media screen and (min-width: $bp-desktop) {
+      font-size: 22px;
+      line-height: 1.7;
+    }
   }
 
   &__img-container {
     position: relative;
+
+    @media screen and (min-width: $bp-desktop) {
+      position: relative;
+    }
   }
 
   &__img-item {
-    /* border: 1px solid black; */
-    border-radius: 50%;
-    position: absolute;
-    left: 50%;
-    top: calc(60% + 40px);
-  }
+    display: none;
 
-  &__img-item:first-child {
-    border-radius: 50%;
+    @media screen and (min-width: $bp-desktop) {
+      /* border: 1px solid black; */
+      border-radius: 50%;
+      position: absolute;
+      left: 40%;
+      top: calc(60% + 80px);
+      display: block;
+
+      &:first-child {
+        border-radius: 50%;
+        top: 0;
+        left: 15%;
+        display: block;
+      }
+
+      &:last-child {
+        position: relative;
+        top: 85%;
+        left: 60%;
+        display: block;
+      }
+    }
   }
 }
