--- a/scss/layouts/_footer.scss
+++ b/scss/layouts/_footer.scss
@@ -5,63 +5,93 @@ footer {
   background-size: cover;
   padding: 56px 0;
   position: relative;
+
+  &::after {
+    content: '';
+    position: absolute;
+    background-repeat: no-repeat;
+    bottom: 0;
+    right: 0;
+    background-image: url(../img/cosmetic.png);
+    width: 247px;
+    height: 152px;
+  }
 }
 
-.footer::after {
-  content: '';
-  position: absolute;
-  background-repeat: no-repeat;
-  bottom: 0;
-  right: 0;
-  background-image: url(../img/cosmetic.png);
-  width: 247px;
-  height: 152px;
-}
+.footer {
+  &__container {
+    display: flex;
+    gap: 20px;
+  }
 
-.footer-container {
-  display: flex;
-  gap: 20px;
-}
+  &__nav,
+  &__address {
+    flex-basis: 50%;
+    display: flex;
+    gap: 186px;
+  }
 
-.address-link {
-  color: var(--color-primary-light);
-  font-size: 16px;
-  line-height: 1.2;
-  transition: color 0.2s;
-}
+  &__logo,
+  &__menu {
+    flex-grow: 1;
+  }
 
-.address-link:hover {
-  color: var(--color-brand-blue);
-}
+  &__menu li {
+    margin-bottom: 16px;
+  }
 
-.address-copyright {
-  color: #747272;
-  font-size: 13px;
-  line-height: 1.2;
-}
+  &__menu li:last-child {
+    margin-bottom: 0;
+  }
 
-.footer-nav,
-.footer-address {
-  flex-basis: 50%;
-  display: flex;
-  gap: 20px;
-}
+  &__address-link {
+    color: var(--color-primary-light);
+    font-size: 16px;
+    line-height: 1.2;
+    transition: color 0.2s;
 
-.footer-logo,
-.footer-menu {
-  flex-grow: 1;
-}
+    &:hover {
+      color: var(--color-brand-blue);
+    }
+  }
 
-.address-list,
-.address-info {
-  flex-grow: 1;
-}
+  &__address-list,
+  &__terms-info {
+    flex-grow: 1;
+  }
 
-/* .footer-menu-icons {
-  display: flex;
-  fill: var(--color-primary-light);
-}
+  &__address-list li {
+    margin-bottom: 16px;
+  }
 
-.footer-menu-icons .menu-icon:hover {
-  fill: var(--color-brand-blue);
-} */
+  &__address-list li:last-child {
+    margin-bottom: 0;
+  }
+
+  &__social-icons {
+    padding-top: 18px;
+    display: flex;
+    justify-content: space-around;
+  }
+
+  &__social-item {
+    fill: var(--color-primary-light);
+    transition: fill 0.2s;
+  }
+
+  &__social-item:hover {
+    fill: var(--color-brand-blue);
+  }
+
+  &__terms-link {
+    font-size: 16px;
+    color: var(--color-primary-light);
+  }
+
+  &__terms-copyright {
+    color: #747272;
+    font-size: 13px;
+    line-height: 1.2;
+    padding-top: 16px;
+  }
+}
