--- a/scss/layouts/_hero-section.scss
+++ b/scss/layouts/_hero-section.scss
@@ -1,35 +1,68 @@
 .hero-section {
-  padding: 126px 0;
+  padding: 70px 0 35px;
   background-image: url(../img/hero-section-bg.jpg);
   background-repeat: no-repeat;
   background-position: top right;
   background-size: contain;
 
+  @media screen and (min-width: $bp-desktop) {
+    padding: 126px 0;
+  }
+
   &__container {
     max-width: 410px;
-    padding: 16px 0 0 106px;
+    padding: 25px 0;
+    margin: 0 auto;
+
+    @media screen and (min-width: $bp-desktop) {
+      padding: 125px 0 0 105px;
+      margin: 0;
+    }
   }
 
   &__text-name {
-    margin-bottom: 16px;
+    margin-bottom: 0;
+    font-size: 12px;
+    text-align: center;
+
+    @media screen and (min-width: $bp-desktop) {
+      text-align: start;
+      margin-bottom: 16px;
+      font-size: 18px;
+    }
   }
 
   &__title {
     text-transform: capitalize;
+    text-align: center;
     color: var(--color-brand-blue);
     font-family: 'Play';
     font-weight: 700;
-    line-height: 0.8;
-    font-size: 140px;
+    line-height: 0.85;
+    font-size: 54px;
     margin-bottom: 40px;
+
+    @media screen and (min-width: $bp-desktop) {
+      line-height: 0.8;
+      font-size: 140px;
+    }
   }
 
   &__text-consultation {
     color: #4a4a4a;
     font-family: 'Roboto';
-    font-size: 12px;
-    line-height: 1.5;
-    margin-bottom: 0px;
-    max-width: 250px;
+    font-size: 11px;
+    line-height: 1.65;
+
+    text-align: center;
+    max-width: 190px;
+    margin: 0 auto;
+
+    @media screen and (min-width: $bp-desktop) {
+      font-size: 12px;
+      line-height: 1.5;
+      max-width: 220px;
+      margin: 0;
+    }
   }
 }
