--- a/scss/layouts/_privilege-section.scss
+++ b/scss/layouts/_privilege-section.scss
@@ -4,6 +4,10 @@
   }
 
   &__container {
-    display: flex;
+    display: block;
+
+    @media screen and (min-width: $bp-desktop) {
+      display: flex;
+    }
   }
 }
