--- a/scss/layouts/_procedures-section.scss
+++ b/scss/layouts/_procedures-section.scss
@@ -1,5 +1,8 @@
-.section-procedures__container {
-  display: flex;
-  align-items: center;
-  gap: 32px;
+.section-procedures {
+  &__container {
+    display: flex;
+    align-items: center;
+    gap: 32px;
+    justify-content: center;
+  }
 }
