--- a/scss/layouts/_location-section.scss
+++ b/scss/layouts/_location-section.scss
@@ -1,14 +1,38 @@
 .section-location {
   &__container {
     display: flex;
-    gap: 32px;
+    gap: 24px;
     justify-content: center;
+    flex-direction: column-reverse;
+
+    @media screen and (min-width: $bp-tablet) {
+      flex-direction: column-reverse;
+      gap: 30px;
+    }
+
+    @media screen and (min-width: $bp-desktop) {
+      flex-direction: row;
+      gap: 32px;
+    }
   }
 
   &__map {
     border: none;
-    border-radius: 32px;
+    height: 176px;
+    margin: 0 -20px;
     flex-shrink: 0;
+
+    @media screen and (min-width: $bp-tablet) {
+      margin: 0 -165px;
+      height: 240px;
+    }
+
+    @media screen and (min-width: $bp-desktop) {
+      margin: auto;
+      width: 605px;
+      height: 480px;
+      border-radius: 32px;
+    }
   }
 
   &__form {
