--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,12 +6,13 @@
 
 @import './components/buttons';
 @import './components/carousel';
+@import './components/form-terms';
 @import './components/links';
 @import './components/social-icons';
 @import './components/stars-svg';
+@import './components/pagination';
 @import './components/privilege-cards';
 @import './components/procedures-cards';
-@import './components/form-terms';
 
 @import './layouts/about-section';
 @import './layouts/privilege-section';
