--- a/css/main.css
+++ b/css/main.css
@@ -98,15 +98,38 @@ body {
   font-size: 18px;
   font-weight: 400;
   line-height: 1.3;
-  background-image: url(../img/background.png);
-  background-repeat: no-repeat;
-  background-size: contain;
   margin: 0;
-  background-position: 0% 67%;
   cursor: default;
 }
 
+.main-backdrop {
+  background-image: url(../img/background.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: 0px 1300px;
+  background-attachment: scroll;
+}
+@media screen and (max-width: 768px) {
+  .main-backdrop {
+    background-position: 0px 750px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .main-backdrop {
+    background-position: 0px 790px;
+  }
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 a {
+  display: inline-block;
   text-decoration: none;
 }
 
@@ -223,6 +246,20 @@ ul {
           transform: rotate(180deg);
 }
 
+.form-terms {
+  margin: 0 auto;
+  max-width: 220px;
+  font-weight: 500;
+  font-size: 12px;
+  text-align: center;
+  color: var(--color-form-border);
+}
+.form-terms__link {
+  color: var(--color-form-border);
+  text-underline-offset: 3px;
+  text-decoration: underline;
+}
+
 .link {
   color: var(--color-primary-blue);
   cursor: pointer;
@@ -314,6 +351,29 @@ ul {
   }
 }
 
+.pagination {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 24px;
+}
+.pagination__button {
+  width: 11px;
+  height: 11px;
+  padding: 0;
+  background-color: var(--color-form-border);
+  border-radius: 50%;
+}
+.pagination__button--active {
+  background-color: var(--color-brand-blue);
+}
+
 .privilege-card__list {
   display: block;
 }
@@ -372,48 +432,38 @@ ul {
   margin-bottom: 0;
 }
 
-.procedures-card__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 20px;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-}
 .procedures-card__item {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-preferred-size: calc((100% - 40px) / 3);
-      flex-basis: calc((100% - 40px) / 3);
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-.procedures-card__control {
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
-  padding: 24px;
-  border-radius: 4px 125px 4px 125px;
-  height: 344px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 32px;
+  border-radius: 4px 125px 4px 120px;
+  height: 450px;
+  width: 100%;
+  max-width: 350px;
   background-image: -webkit-gradient(linear, left top, left bottom, color-stop(55.21%, rgba(10, 44, 213, 0)), color-stop(72.92%, rgba(14, 84, 225, 0.71)), to(var(--color-primary-blue)));
   background-image: linear-gradient(180deg, rgba(10, 44, 213, 0) 55.21%, rgba(14, 84, 225, 0.71) 72.92%, var(--color-primary-blue) 100%);
-  -webkit-transition: -webkit-transform 0.2s;
-  transition: -webkit-transform 0.2s;
-  transition: transform 0.2s;
-  transition: transform 0.2s, -webkit-transform 0.2s;
 }
-.procedures-card__control:hover {
-  -webkit-transform: scale(1.05);
-          transform: scale(1.05);
+@media screen and (min-width: 768px) {
+  .procedures-card__item {
+    height: 340px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .procedures-card__item {
+    height: 450px;
+  }
 }
 .procedures-card__image {
   position: absolute;
@@ -425,26 +475,13 @@ ul {
   border-radius: 4px 120px 4px 120px;
 }
 .procedures-card__title {
+  max-width: 150px;
   color: var(--color-primary-light);
   font-size: 22px;
+  font-weight: 400;
   line-height: 1.2;
-  -ms-flex-preferred-size: 150px;
-      flex-basis: 150px;
   text-align: center;
-}
-
-.form-terms {
-  margin: 0 auto;
-  max-width: 220px;
-  font-weight: 500;
-  font-size: 12px;
-  text-align: center;
-  color: var(--color-form-border);
-}
-.form-terms__link {
-  color: var(--color-form-border);
-  text-underline-offset: 3px;
-  text-decoration: underline;
+  margin-bottom: 0;
 }
 
 .section-about {
@@ -568,6 +605,7 @@ footer {
 }
 footer::after {
   content: "";
+  display: none;
   position: absolute;
   background-repeat: no-repeat;
   bottom: 0;
@@ -576,12 +614,29 @@ footer::after {
   width: 247px;
   height: 152px;
 }
+@media screen and (min-width: 1280px) {
+  footer::after {
+    display: block;
+  }
+}
 
 .footer__container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   gap: 20px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+@media screen and (min-width: 1280px) {
+  .footer__container {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
 }
 .footer__nav, .footer__address {
   -ms-flex-preferred-size: 50%;
@@ -589,9 +644,35 @@ footer::after {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 186px;
+  gap: 42px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+}
+@media screen and (min-width: 1280px) {
+  .footer__nav, .footer__address {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    gap: 100px;
+    -webkit-box-align: stretch;
+        -ms-flex-align: stretch;
+            align-items: stretch;
+    text-align: start;
+  }
 }
 .footer__logo, .footer__menu {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+}
+.footer__menu-container {
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
@@ -617,6 +698,14 @@ footer::after {
       -ms-flex-positive: 1;
           flex-grow: 1;
 }
+.footer__address-list {
+  display: none;
+}
+@media screen and (min-width: 1280px) {
+  .footer__address-list {
+    display: block;
+  }
+}
 .footer__address-list li {
   margin-bottom: 16px;
 }
@@ -628,8 +717,7 @@ footer::after {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  gap: 24px;
 }
 .footer__social-item {
   fill: var(--color-primary-light);
@@ -844,16 +932,53 @@ footer::after {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 32px;
+  gap: 24px;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: column-reverse;
+          flex-direction: column-reverse;
+}
+@media screen and (min-width: 768px) {
+  .section-location__container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    gap: 30px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .section-location__container {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    gap: 32px;
+  }
 }
 .section-location__map {
   border: none;
-  border-radius: 32px;
+  height: 176px;
+  margin: 0 -20px;
   -ms-flex-negative: 0;
       flex-shrink: 0;
+}
+@media screen and (min-width: 768px) {
+  .section-location__map {
+    margin: 0 -165px;
+    height: 240px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .section-location__map {
+    margin: auto;
+    width: 605px;
+    height: 480px;
+    border-radius: 32px;
+  }
 }
 .section-location__form {
   width: 100%;
@@ -987,6 +1112,35 @@ footer::after {
       -ms-flex-align: center;
           align-items: center;
   gap: 32px;
+}
+@media screen and (min-width: 768px) {
+  .section-procedures__container {
+    margin: 0 -55px 0;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .section-procedures__container {
+    margin: 0;
+  }
+}
+.section-procedures__list {
+  margin-bottom: 52px;
+}
+.section-procedures__button {
+  display: none;
+}
+@media screen and (min-width: 1280px) {
+  .section-procedures__button {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+.swiper-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
