--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -8,15 +8,40 @@ body {
   font-size: 18px;
   font-weight: 400;
   line-height: 1.3;
-  background-image: url(../img/background.png);
-  background-repeat: no-repeat;
-  background-size: contain;
+  // background-image: url(../img/background.png);
+  // background-repeat: no-repeat;
+  // background-size: contain;
+  // background-position: 0% 67%;
   margin: 0;
-  background-position: 0% 67%;
+
   cursor: default;
 }
 
+.main-backdrop {
+  background-image: url(../img/background.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: 0px 1300px;
+  background-attachment: scroll;
+
+  @media screen and (max-width: $bp-tablet) {
+    background-position: 0px 750px;
+  }
+
+  @media screen and (max-width: $bp-mobile) {
+    background-position: 0px 790px;
+  }
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
 a {
+  display: inline-block;
   text-decoration: none;
 }
 
