--- a/scss/components/_procedures-cards.scss
+++ b/scss/components/_procedures-cards.scss
@@ -1,38 +1,28 @@
 .procedures-card {
-  &__list {
-    display: flex;
-    gap: 20px;
-    flex-wrap: wrap;
-  }
-
   &__item {
-    display: flex;
-    flex-basis: calc((100% - 40px) / 3);
-    justify-content: center;
-  }
-
-  &__control {
     position: relative;
     display: flex;
-    // flex-direction: column;
-    justify-content: center;
-    align-items: flex-end;
-    padding: 24px;
-    // border: 1px solid black;
-    border-radius: 4px 125px 4px 125px;
-    height: 344px;
-    // width: 345px;
+    flex-direction: column;
+    justify-content: end;
+    align-items: center;
+    padding: 32px;
+    border-radius: 4px 125px 4px 120px;
+    height: 450px;
+    width: 100%;
+    max-width: 350px;
     background-image: linear-gradient(
       180deg,
       rgba(10, 44, 213, 0) 55.21%,
       rgba(14, 84, 225, 0.71) 72.92%,
       var(--color-primary-blue) 100%
     );
-    transition: transform 0.2s;
-  }
 
-  &__control:hover {
-    transform: scale(1.05);
+    @media screen and (min-width: $bp-tablet) {
+      height: 340px;
+    }
+    @media screen and (min-width: $bp-desktop) {
+      height: 450px;
+    }
   }
 
   &__image {
@@ -46,12 +36,12 @@
   }
 
   &__title {
+    max-width: 150px;
     color: var(--color-primary-light);
     font-size: 22px;
+    font-weight: 400;
     line-height: 1.2;
-    flex-basis: 150px;
     text-align: center;
-    // display: flex;
-    // align-items: end;
+    margin-bottom: 0;
   }
 }
