Fix retina pictures

--- a/css/main.css
+++ b/css/main.css
@@ -107,7 +107,8 @@ body {
 }
 
 .main-backdrop {
-  background-image: url(../img/background.png);
+  background-image: -webkit-image-set(url("../img/background.png") 1x, url("../img/background@2x.png") 2x);
+  background-image: image-set(url("../img/background.png") 1x, url("../img/background@2x.png") 2x);
   background-repeat: no-repeat;
   background-size: contain;
   background-position: 0px 1300px;
@@ -866,6 +867,8 @@ footer::after {
 .hero-section {
   padding: 70px 0 35px;
   background-image: url(../img/hero-section-bg.jpg);
+  background-image: -webkit-image-set(url("../img/hero-section-bg.jpg") 1x, url("../img/hero-section-bg@2x.jpg") 2x);
+  background-image: image-set(url("../img/hero-section-bg.jpg") 1x, url("../img/hero-section-bg@2x.jpg") 2x);
   background-repeat: no-repeat;
   background-position: top right;
   background-size: contain;
