--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -22,7 +22,10 @@ body {
 }
 
 .main-backdrop {
-  background-image: url(../img/background.png);
+  background-image: image-set(
+    url('../img/background.png') 1x,
+    url('../img/background@2x.png') 2x
+  );
   background-repeat: no-repeat;
   background-size: contain;
   background-position: 0px 1300px;
