--- a/scss/layouts/_hero-section.scss
+++ b/scss/layouts/_hero-section.scss
@@ -1,6 +1,10 @@
 .hero-section {
   padding: 70px 0 35px;
   background-image: url(../img/hero-section-bg.jpg);
+  background-image: image-set(
+    url('../img/hero-section-bg.jpg') 1x,
+    url('../img/hero-section-bg@2x.jpg') 2x
+  );
   background-repeat: no-repeat;
   background-position: top right;
   background-size: contain;
